# shipEscape

./: .gitignore  CMakeLists.txt  ship.hpp  xp.hpp
viewer/: CMakeLists.txt  extern.cpp  extern.h  mainviewer.cpp  openglwindow.cpp  openglwindow.h  renderquad.hpp  res.qrc  shipwindow.hpp
viewer/shaders/: blurredcircle.frag  circle.frag  plain.frag  sprite.frag  sprite.vert  thrust.frag
